--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -3,28 +3,28 @@ name: Docker Build and Push
 on:
   push:
     branches:
-      - main # Укажите вашу основную ветку (например, main или master)
+      - main
 
 jobs:
   build_and_push:
-    runs-on: ubuntu-latest # Используем последнюю версию Ubuntu
+    runs-on: ubuntu-latest
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v4 # Скачиваем код из репозитория
+      uses: actions/checkout@v4
 
     - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3 # Настраиваем Docker Buildx для сборки
+      uses: docker/setup-buildx-action@v3
 
     - name: Login to Docker Hub
       uses: docker/login-action@v3
       with:
-        username: ${{ secrets.DOCKER_USERNAME }} # Ваши учетные данные Docker ID
+        username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
     - name: Build and push Docker image
       uses: docker/build-push-action@v5
       with:
-        context: . # Путь к директории с Dockerfile
-        file: ./Dockerfile # Путь к вашему Dockerfile
-        push: true # Отправляем образ в реестр
-        tags: thrsnknwldgthtsntpwr/nginx-test-app:latest # Ваш Docker ID/название образа:тег
+        context: .
+        file: ./Dockerfile
+        push: true
+        tags: thrsnknwldgthtsntpwr/nginx-test-app:latest
