--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -20,8 +20,8 @@ jobs:
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build and Push Docker Image
         uses: docker/build-push-action@v4
@@ -29,8 +29,8 @@ jobs:
           context: .
           push: true
           tags: |
-            ${{ secrets.DOCKERHUB_USERNAME }}/nginx-test-app:latest
-            ${{ secrets.DOCKERHUB_USERNAME }}/nginx-test-app:${{ github.ref_name }}
+            ${{ secrets.DOCKER_USERNAME }}/nginx-test-app:latest
+            ${{ secrets.DOCKER_USERNAME }}/nginx-test-app:${{ github.ref_name }}
 
   deploy-to-kubernetes:
     runs-on: ubuntu-latest
