--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -37,6 +37,10 @@ jobs:
     needs: build-and-push
     if: startsWith(github.ref, 'refs/tags/v')
     steps:
+      - name: Debug kubeconfig
+        run: |
+          echo "${{ secrets.KUBE_CONFIG_DATA }}" | base64 -d
+          
       - name: Checkout Code
         uses: actions/checkout@v3
 
