--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -39,8 +39,11 @@ jobs:
     steps:
       - name: Debug kubeconfig
         run: |
-          echo "${{ secrets.KUBE_CONFIG_DATA }}" | base64 -d
-          
+          echo "${{ secrets.KUBE_CONFIG_DATA }}" | base64 -d > kubeconfig
+          export KUBECONFIG=kubeconfig
+          kubectl config view
+          kubectl cluster-info
+          kubectl get nodes
       - name: Checkout Code
         uses: actions/checkout@v3
 
