--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -59,6 +59,7 @@ jobs:
 
       - name: Deploy to Kubernetes
         run: |
-          kubectl apply -f k8s/deployment.yaml
-          kubectl apply -f k8s/service.yaml
-          kubectl rollout status deployment/nginx-test-app
+          export KUBECONFIG=kubeconfig
+          kubectl --kubeconfig=kubeconfig apply -f k8s/deployment.yaml
+          kubectl --kubeconfig=kubeconfig apply -f k8s/service.yaml
+          kubectl --kubeconfig=kubeconfig rollout status deployment/myapp
