--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
       - name: nginx-test-app
-        image: thrsnknwldgthtsntpwr/nginx-test-app:latest
+        image: thrsnknwldgthtsntpwr/nginx-test-app:1.0.10
         imagePullPolicy: Always
         ports:
         - containerPort: 80
