added kubectl rollout restart

--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -55,4 +55,5 @@ jobs:
           export KUBECONFIG=kubeconfig
           kubectl --kubeconfig=kubeconfig apply -f k8s/deployment.yaml -n netology
           kubectl --kubeconfig=kubeconfig apply -f k8s/service.yaml -n netology
+          kubectl --kubeconfig=kubeconfig rollout restart deployment/nginx-test-app -n netology
           kubectl --kubeconfig=kubeconfig rollout status deployment/nginx-test-app -n netology
